# gammaflow

./: .env.example  .gitignore  ARCHITECTURE.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  bench_output.txt  docker-compose.yml  generate_commits.py  go.mod  go.sum  package.json  replay_commits.sh  replay_dashboard_commits.sh  turbo.json
.github/workflows/: ci.yml  deploy.yml
.gocache/00/: 00fa86b438c7062a74754dc35c33534ecebe7f86e4b2963c8aacf694925b7cd6-a
.gocache/02/: 0259c66adf180d9f83d27a345391941456a9120f7449bbd3688f74dfcef9b0ef-a
.gocache/03/: 031f8402bb4d50244bf5b122397cf31263294ff22ed4bcfe56da3db9876657b4-a
.gocache/04/: 0438075c8aeb4c2740373e39f62b8c4fa1c3c206f217a61c65775e20b92b4bae-a  04eeada751477279eb6d619c621033059a75ef498eee83a0938d095b80896b36-a
.gocache/05/: 05f77efdd564adec0c9ca97720f9503b2ab218034c9706129b6e8408192c3e3c-a
.gocache/06/: 0610aeb5fefe6cfb285744e172fb406472d23fb86dde771858783cd9a4e52575-a
.gocache/07/: 076d7e716189125cf9c948f9caef60c712cc2092a34e321a52c153215f491ba7-a
.gocache/08/: 0800f67b2beab773ca322bcde8cb4fffa1409868312bcdc1697b23c2e1c9c5e6-a  08ce6533c02032f0a31e36ad5ea5139475187d34196829ec71681003d90bfffd-a
.gocache/09/: 091c7dc11c171cc4d5eef0d220ec177c59bff1284531491a0574f73015d1004d-a  093e7f80b65f2e7d65009bde1f178b52c69004ba95ab4712d78cf1906ed3122e-a  09b8d9e01c23d6a27b64a9ff9f245b448576ca8cb3d62a1618f1aafdd6029c50-a  09cd44283126550d63b9c766abd3c1cb2e24611f484403be94d0441fd77d8bf0-a
.gocache/0a/: 0a05d8a50d46d613fe102489dea100292df583075b69132aea33303fb3fe0ab7-a
.gocache/0b/: 0ba03f8db18504c0ebc8b6c1380d3e8232f4dec49ebf0f6d3858733cb368a26e-a
.gocache/0e/: 0ea50333f3980f73f02a0d904abd911d430ef7e4bf7d4b702aa84579d10f2b72-a  0ef4b4538631a6a1d2d4cbd53b6b2e4465b7834625f3668a74452610c636ad43-a
.gocache/10/: 101bfda3dad05855e85bb3515dcbf7199a36d39160dd15fb6c23501141c2c9d5-a
.gocache/12/: 12809ef4dd987672032f59d313134d44be7b9683081fc3eca851bbde8f698313-a  128b4654fde88f506293ddd9c1c04dcbc017a34a096530e007679480c94e9f26-a  12ad56ab8d2ee264b63ba29896df9ca2e74094e6b81f1e90a5c80a2c8b7c3a29-a  12db64d7c7359b825263657515b4fe76da32be81167f19944161be866c25a8d5-a  12df62938c46128526c327029b4f63dbc44ed798d91afffcc0eff5807e857247-a
.gocache/13/: 13a2fcb37eb680f5a300f92343b9b63773bae523589ba8e8173ec75a9e6b5f44-a
.gocache/14/: 140f3767a82756fcd8d62a5c0421eb2ca7bfe0936481beff18420d7168e597dd-a
.gocache/15/: 15fadfd492fb360746b00814caf52a82df255ad0a2e9db4c316a57bc8a35d07c-a
.gocache/17/: 1717297404c1aa0d98b4cd0073bdf1923dad191f823c3e28aca94cbc25f41533-d  174ea9377d26985ce976ce1c4762b96a01cd7555bcd3a1ca05af54e7c29b7516-a  17c567aa75df37aca5616950171310c0d3b9dd41a2573f7d2aa2e139afbbc22b-d
.gocache/18/: 1808670c974bcd0e381a5d91cfc3a77474866b06f78260fbe8d7555f7d327c4e-a
.gocache/19/: 194c802f6c2d3748895ac12ce9c2af72b4419381a5796964e4b0aea53fd2b493-a
.gocache/1b/: 1b595414eb068c0ac0a005ff48b52f3a2554e6eeb8e1771db0f1aaa290c806ac-a  1bccff89b36f19f2e09312770efe81b2d42b9851033869b592468e3f056d6fca-a  1be0fe82c41462b139ac0b887184d7e132d4aa3dac38cec8a6b243419965c1bf-a
.gocache/1c/: 1c6be59a16be5d9f18c0d62a67d190e902bbc0bf70e584cd04cfdfc6125beefa-a
.gocache/1e/: 1e2ee683e7725e13accf9e1a8ecc295e984ed6d8141897f75d0766383f42f5aa-a
.gocache/1f/: 1f7ec69b3b43d782e7df46a3f55898f9e1309fb54c6f4f7f474e10ab2da19aac-a
.gocache/20/: 20f6af57eebf1930804d140c3e441bed0e0cf9b3dfca38318b3467a3580a8fb3-a
.gocache/22/: 224f3f0ad67b50729dec93bc3a5baf2b6fc362165d91a5b3a80057758fb018ea-a
.gocache/23/: 23383a1658fab802b037342ca8f4cd18561ad9e2b718f8a0898bc0d8809c92e8-a
.gocache/26/: 2600603f432113ad6e056bd90cfa489872850d68da21b49129d5c5ae46953dad-a
.gocache/27/: 2710a13bb98a43b3b4f98babec49153419808043f939e0189eadfec1ea4e8e60-a
.gocache/28/: 284242c7fed99f560062f5e23930a4746719f7c6cd573b3735917aea248b214e-a
.gocache/2a/: 2a5edb4887c33f817011eb51cf5c312444199f51588c27a546d6eaddf084ea3a-a
.gocache/2b/: 2baac714acc3b2d26817700ee2801d7f81769ac4c29ce801c2f00ae32bf4f9f1-a
.gocache/2d/: 2d000915b1d6864689326abfa86066e744b893153fc5742982e47df223bfe3ec-a  2daa1b305eeb0792b9c3ecdee46353b711f6da6632d2aec12adce63201f361ce-a
.gocache/2e/: 2ebf97e24523fdd6778f2306ef99108c0ddcf006de5fa0ea95cb74295518204b-a
.gocache/2f/: 2f4301fd677a535d93be7d7aac6b22c5a99d80a9e5a01cc43cbfc5453200373d-a
.gocache/31/: 315d63a65cdfca3e8da99b9472173ba4fa4903dc24980e1a583f74ef839fb371-a
.gocache/33/: 335f63d2edc72abe9cb21530ce04b32b4cba9b5bff4fec8628b5faf4599c81b7-a  33e30721b1c6d6764e429f314e419e03b35ac9f8f3115d5d09f8705db9a03b1c-d
apps/api/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
apps/api/app/: auth.py  config.py  dependencies.py  main.py
apps/api/app/conversation/: cache.py  citation_parser.py  fallback.py  prompt_builder.py  router.py  schemas.py  streamer.py
apps/api/app/db/: database.py  models.py
apps/api/app/db/migrations/: env.py
apps/api/app/db/migrations/versions/: 001_initial.py
apps/api/app/ingestion/: chunker.py  detector.py  embedder.py  extractor.py  ocr.py  ocr_preprocessor.py  processor.py  router.py  schemas.py  text_cleaner.py
apps/api/app/mapping/: mapper.py  router.py  schemas.py
apps/api/app/problems/: extractor.py  ranker.py  router.py  schemas.py
apps/api/app/retrieval/: reranker.py  router.py  schemas.py  searcher.py
apps/api/app/syllabus/: graph_builder.py  parser.py  router.py  schemas.py
apps/api/app/vector/: client.py  collections.py
apps/api/tests/: test_chunker.py  test_e2e_rag.py  test_embedder.py  test_extractor.py  test_fallback.py  test_ocr.py  test_parser.py  test_ranker.py  test_searcher.py
benchmarks/: .gitkeep  latency_bench.cpp
dashboard/: README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: architecture.md  deployment.md
include/: .gitkeep  evaluator.hpp  memory_pool.hpp  models.hpp  ring_buffer.hpp  types.hpp
infra/: docker-compose.prod.yml
scripts/: phase0_commits.ps1  phase1_commits.ps1  phase2_commits.ps1  phases_3to6.ps1
src/: .gitkeep
tests/: .gitkeep
(+338 files in other folders)
